# Fullstack-Todo-App-with-FastAPI-SQLModel-Nextjs-14

backend/dailyDo-todo-app/: .env  pyproject.toml
backend/dailyDo-todo-app/dailydo_todo_app/: main.py  setting.py
backend/dailyDo-todo-app/tests/: test_main.py
frontend/: package-lock.json  package.json  types.d.ts
frontend/src/actions/: actions.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AddTask.tsx  EditTask.tsx  SubmitButton.tsx  Task.tsx  TodoTable.tsx  ToolTip.tsx
frontend/src/components/ui/: Modal.tsx
